--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../1st-master/style.css">
   <title>1st</title>
 </head>
 
 <body>
-  <div class="intro">
-    <div class="container">
-    </div>
 
     
     <header class="header">
       <div class="container">
-        <div class="menu">
-          <nav class="header_nav">Home</nav>
-          <nav class="header_nav">Photoapp</nav>
-          <a href="#" class="header_logo"><img src="Livello_2.svg" alt=""></a>
-          <nav class="header_nav">design</nav>
-          <nav class="header_nav">download</nav>
-        </div>
+        <nav class="menu">
+          <a class="menu_link" href="#">Home</a>
+          <a class="menu_link" href="#">Photoapp</a>
+          <a class="menu_logo" href="#"><img src="Livello_2.png" alt=""></a>
+          <a class="menu_link" href="#">design</a>
+          <a class="menu_link" href="#">download</a>
+        </nav>
       </div>
     </header>
 
