--- a/index.html
+++ b/index.html
@@ -5,27 +5,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../1st-master/style.css">
+  <link rel="stylesheet" href="../1st/css/style.css">
   <title>1st</title>
 </head>
 
 <body>
 
-    
-    <header class="header">
-      <div class="container">
+
+  <header class="header">
+    <div class="container">
+      <div class="header_wrapper">
         <nav class="menu">
           <a class="menu_link" href="#">Home</a>
           <a class="menu_link" href="#">Photoapp</a>
-          <a class="menu_logo" href="#"><img src="Livello_2.png" alt=""></a>
+          <a class="menu_logo" href="#"><img src="img/logo.png" alt=""></a>
           <a class="menu_link" href="#">design</a>
           <a class="menu_link" href="#">download</a>
         </nav>
+
+        <div class="header_inner"> 
+          <h1 class="header_title">your life , a photo</h1>
+          <h2 class="header_subtitle">print your life in a simple photo</h2>
+          <button class="header_btn">get started</button>
+        </div>
+
+        <div class="header_media">
+          <a href="#" class="icons_link"><img src="img/fa-twitter.png" alt="" class="header_icons"></a>
+          <a href="#" class="icons_link"><img src="img/fa-flickr.png" alt="" class="header_icons"></a>
+          <a href="#" class="icons_link"><img src="img/fa-dribbble.png" alt="" class="header_icons"></a>
+        </div>
       </div>
-    </header>
+      
+    </div>
+
+  </header>
 
 
-  </div>
+</div>
 </body>
 
 </html>
